--- a/vignettes/qpcr_analysis.Rmd
+++ b/vignettes/qpcr_analysis.Rmd
@@ -192,7 +192,7 @@ amount <- rep(c(1, .5, .2, .1, .05, .02, .01), each = 3)
 ## calculate standard curve
 standard_curve <- pcr_assess(pcr_dilute,
                              amount = amount,
-                             mode = 'standard_curve')
+                             method = 'standard_curve')
 intercept <- standard_curve$intercept
 slope <- standard_curve$slope
 ```
