--- a/vignettes/qpcr_analysis.Rmd
+++ b/vignettes/qpcr_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis of qPCR data"
+title: "Analysis of real-time qPCR data"
 author: "Mahmoud Ahmed"
 date: "`r Sys.Date()`"
 output:
@@ -55,7 +55,7 @@ references:
     month: 12
 vignette: >
   %\VignetteEngine{knitr::knitr}
-  %\VignetteIndexEntry{Analysis of qPCR data}
+  %\VignetteIndexEntry{Analysis of real-time qPCR data}
   %\usepackage[UTF-8]{inputenc}
 ---
 
@@ -471,7 +471,7 @@ gg <- pcr_assess(ct3,
            method = 'standard_curve',
            plot = TRUE)
 gg + 
-  labs(x = 'Log 10 amount', y = 'Ct value')
+  labs(x = 'Log 10 amount', y = 'CT value')
 ```
 
 ## Analyze `pcr_analyze` 
@@ -500,7 +500,7 @@ res1 <- pcr_analyze(ct1,
   reference_gene = 'GAPDH',
   reference_group = 'brain')
 
-knitr::kable(res1, caption = '\\label{table:table9} Double delta Ct method (separate tubes)')
+knitr::kable(res1, caption = '\\label{table:table9} Double delta $C_T$ method (separate tubes)')
 ```
 
 The output of `pcr_analyze` is 8 columns; contains the calculatations of each gene in each group and the error terms (Table \ref{table:table8}). This analysis uses the default `mode`, 'separate_tube' as the input dataset came for an experiment where the target `r names(ct1)[1]` and the control gene `r names(ct1)[2]` were ran in separate tubes.  
@@ -516,7 +516,7 @@ res2 <- pcr_analyze(ct2,
   reference_group = 'brain',
   mode = 'same_tube')
 
-knitr::kable(res2, caption = '\\label{table:table10} Double delta Ct method (same tube)')
+knitr::kable(res2, caption = '\\label{table:table10} Double delta $C_T$ method (same tube)')
 ```
 
 The only difference here is that the average of the $C_T$ values for the target gene `r names(ct1)[1]` is calculated after normalizing by the reference gene `r names(ct1)[2]`. The rest of the calculations are expected to be slighlty different than the previous case (Table \ref{table:table10}).  
@@ -545,7 +545,7 @@ plot_grid(gg1, gg2)
 
 ### Delta $C_T$ ($\Delta C_T$) `pcr_dct` 
 
-This method is a variation of the double delta Ct model. It can be used to caculate the fold change of in one sample relative to the others. For example, it can be used to compare and choosing a control/referece genes.  
+This method is a variation of the double delta $C_T$ model. It can be used to caculate the fold change of in one sample relative to the others. For example, it can be used to compare and choosing a control/referece genes.  
 
 ```{r make_up_dataset}
 ## example to check fold change of control gens
@@ -574,14 +574,14 @@ res <- pcr_analyze(pcr_hk,
             reference_group = 'brain',
             method = 'delta_ct')
 
-knitr::kable(res, caption = '\\label{table:table11} Delta Ct method')
+knitr::kable(res, caption = '\\label{table:table11} Delta $C_T$ method')
 ```
 
 Similarly, the output contains the calculated model and the error terms (Table \ref{table:table11}). The difference here will be skiping the normalization step and caliberating the $C_T$ values of all genes to  a `reference_group`.  
 
 Figure \ref{fig:fig4} shows the average relative fold change of the identical housekeeping genes and there error terms in two tissue samples.  
 
-```{r plot_dct_method, fig.cap='\\label{fig:fig4} GAPDH relative fold change using delta Ct'}
+```{r plot_dct_method, fig.cap='\\label{fig:fig4} GAPDH relative fold change using delta $C_T$'}
 ggplot(res, aes(x = group, y = fold_change, group = gene, fill = gene)) +
   geom_col(position = 'dodge') +
   geom_errorbar(aes(ymin = lower, ymax = upper, group = gene)) +
